# building_damage_detection_agent

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: api.py  streamlit_demo.py
configs/: default.yaml
data/: README.md
scripts/: build_instruction_dataset.py  build_xbd_masks.py  create_toy_sample.py  evaluate_damage.py  export_llamafactory_dataset.py  mock_external_mask_tool.py  run_analyze.py  run_xview2_baseline.py
src/rs_xbd_agent/: config.py
src/rs_xbd_agent.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/rs_xbd_agent/agent/: planner.py  prompts.py  state.py
src/rs_xbd_agent/data/: instruction_builder.py  xbd_parser.py
src/rs_xbd_agent/eval/: metrics.py
src/rs_xbd_agent/report/: report_builder.py
src/rs_xbd_agent/tools/: __init__.py  base.py  damage.py  external_command.py  localization.py  registry.py  xview2_command.py
src/rs_xbd_agent/utils/: image.py
tests/: test_core.py
