[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rs-xbd-agent"
version = "0.1.0"
description = "Remote-sensing multimodal agent for xBD disaster damage assessment"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]
